# webkit-testing

./: .gitignore  Cargo.toml  flake.nix  settings.txt
src/: main.rs
src/assets/: odyssey.html
src/assets/invoice/: invoice.html
src/assets/poster/: poster.html
